# LLM-PathwayCurator

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker-pr.yml  docker.yml  pypi-release.yml
docker/: Dockerfile  README.md  docker-compose.yml  requirements.txt
docs/: api-reference.md  concepts.md  getting-started.md  index.md  tutorials.md  user-guide.md
examples/demo/: README.md  de_table.tsv  evidence_table.tsv  make_evidence_table.py  run.sh  sample_card.json
examples/demo/expected/: audit_log.tsv  claims.proposed.tsv  distilled.tsv  evidence.normalized.tsv  modules.tsv  report.jsonl  report.md  risk_coverage.tsv  run_meta.json  sample_card.normalized.json  term_gene_edges.tsv  term_modules.tsv
examples/demo/inputs/: fgsea_results.tsv
paper/: FIGURE_MAP.csv  README.md
paper/config/: benchmarks.csv  fig2.yaml
paper/journal_source_data/: Fig2d_abstain_reasons.tsv  SourceData_EDFig2.xlsx  SourceData_EDFig3.xlsx  SourceData_EDFig4.xlsx  SourceData_Fig2.xlsx
paper/journal_source_data/SourceData_CSV/: EDFig2b_data.csv  EDFig2c_data.csv  EDFig2d_data.csv  EDFig3a_data.csv  EDFig3b_data.csv  EDFig4a_data.csv  EDFig4b_data.csv  EDFig4c_data.csv  EDFig4d_data.csv  EDFig4ef_data.csv  Fig2a_data.csv  Fig2b_data.csv  Fig2c_data.csv  Fig2d_data.csv  Fig2ef_data.csv
paper/notebooks/: Fig2_repro.ipynb  Fig2_repro.v2.ipynb  Fig2_repro.v3.ipynb  Fig2_repro.v4.ipynb  Fig2_repro.v5.ipynb  Fig2_repro.v6.ipynb  Fig2_repro.v7.ipynb  Fig2_repro.v8.ipynb  README.md
paper/scripts/: README.md  bench_fig2.py  collect_fig2_risk_coverage.py  fig2_check_labels_merge.py  fig2_collect_abstain_reasons.py  fig2_collect_risk_coverage.py  fig2_deg_rank.R  fig2_fetch_inputs.py  fig2_fgsea_to_evidence_table.R  fig2_make_claims_ranked_tsv.py  fig2_make_groups.py  fig2_make_labels_template.py  fig2_make_sample_cards.py  fig2_plot.py  fig2_plot_abstain_reasons.py  fig2_plot_claims_ranked.py  fig2_plot_lines_status_by_tau.py  fig2_plot_multipanel.py  fig2_plot_scatter_human_risk.py  fig2_run_pipeline.py  fig2_sanity_check.py  figS2_collect_collection_metrics.py  figS2_collections_plot_hallmark_threshold.py  figS2_export_panel_source_csv.py  figS2_fgsea_to_evidence_table.R  figS2_plot_collection_panels.py  figS2_run_collections_pipeline.py  figS3_make_llm_examples.py  figS4_beataml_deg_rank.R  figS4_beataml_fetch_inputs.py  figS4_beataml_fgsea_to_evidence_table.R  figS4_beataml_make_groups.py  figS4_beataml_make_sample_cards.py  figS_beataml_deg_rank.R  figS_beataml_fetch_inputs.py  figS_beataml_fgsea_to_evidence_table.R  figS_beataml_make_groups.py  figS_beataml_make_sample_cards.py  figS_make_llm_examples.py  figS_plot_abstain_reasons.py  (+6 more)
paper/source_data/BEATAML_TP53_v1/evidence_tables/: BEATAML.evidence_table.tsv
paper/source_data/BEATAML_TP53_v1/labels/: labels_aml_R1_v1.20260203.tsv  labels_aml_R1_v1.tsv
paper/source_data/BEATAML_TP53_v1/out_figS4/: risk_coverage.label.tsv  risk_coverage.tsv
paper/source_data/BEATAML_TP53_v1/sample_cards/: BEATAML.hard.sample_card.json  BEATAML.note.sample_card.json  BEATAML_SWAP.hard.sample_card.json  BEATAML_SWAP.note.sample_card.json
paper/source_data/PANCAN_TP53_v1/: labels.tsv
paper/source_data/PANCAN_TP53_v1/collection_metrics/: audit_reasons_long.tsv  collections_summary_wide.tsv  module_survival_long.tsv
paper/source_data/PANCAN_TP53_v1/evidence_tables/: BRCA.C2_CP_KEGG_MEDICUS.evidence_table.tsv  BRCA.C2_CP_REACTOME.evidence_table.tsv  BRCA.C5_GO_BP.evidence_table.tsv  BRCA.evidence_table.tsv  HNSC.C2_CP_KEGG_MEDICUS.evidence_table.tsv  HNSC.C2_CP_REACTOME.evidence_table.tsv  HNSC.C5_GO_BP.evidence_table.tsv  HNSC.H.evidence_table.tsv  LUAD.C2_CP_KEGG_MEDICUS.evidence_table.tsv  LUAD.C2_CP_REACTOME.evidence_table.tsv  LUAD.C5_GO_BP.evidence_table.tsv  LUAD.evidence_table.tsv  LUSC.C2_CP_KEGG_MEDICUS.evidence_table.tsv  LUSC.C2_CP_REACTOME.evidence_table.tsv  LUSC.C5_GO_BP.evidence_table.tsv  LUSC.H.evidence_table.tsv  OV.C2_CP_KEGG_MEDICUS.evidence_table.tsv  OV.C2_CP_REACTOME.evidence_table.tsv  OV.C5_GO_BP.evidence_table.tsv  OV.evidence_table.tsv  SKCM.C2_CP_KEGG_MEDICUS.evidence_table.tsv  SKCM.C2_CP_REACTOME.evidence_table.tsv  SKCM.C5_GO_BP.evidence_table.tsv  SKCM.H.evidence_table.tsv  UCEC.C2_CP_KEGG_MEDICUS.evidence_table.tsv  UCEC.C2_CP_REACTOME.evidence_table.tsv  UCEC.C5_GO_BP.evidence_table.tsv  UCEC.evidence_table.tsv
paper/source_data/PANCAN_TP53_v1/labels/: labels_hnsc_R1_v1.20260127.tsv  labels_hnsc_R1_v1.20260203.tsv  labels_hnsc_R1_v1.csv  labels_hnsc_R1_v1.tsv
paper/source_data/PANCAN_TP53_v1/out_fig2/: context_swap_risk_coverage.tsv  risk_coverage.label.tsv  risk_coverage.tsv
paper/source_data/PANCAN_TP53_v1/out_figS3/: risk_coverage.label.tsv  risk_coverage.tsv
paper/source_data/PANCAN_TP53_v1/out_llm/: risk_coverage.label.tsv  risk_coverage.label.with_llm.tsv
resources/: README.md  context_lexicon.tsv
resources/gene_id_maps/: build_ensembl_to_symbol_from_gtf.sh  build_entrez_id_map.sh
scripts/: smoke_run_adapter_demo.sh
src/llm_pathway_curator/: __init__.py  _shared.py  audit.py  audit_reasons.py  backends.py  calibrate.py  claim_schema.py  cli.py  distill.py  llm_claims.py  masking.py  modules.py  noise_lists.py  pipeline.py  ranked.py  report.py  sample_card.py  schema.py  select.py  utils.py  viz_ranked.py
src/llm_pathway_curator/adapters/: README.md  __init__.py  fgsea.py  metascape.py
tests/: test_demo_cli.py  test_import.py  test_shared_gate_mode.py  test_smoke_adapters.py
(+2154 files in other folders)
