[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "llm-pathway-curator"
version = "0.0.0"
description = "Convert enrichment outputs into verifiable, auditable pathway claims with calibrated abstention."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Ken Furudate"}]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.0",
  "tabulate>=0.9",
  "matplotlib>=3.8",
  "circlify>=0.15.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "openpyxl>=3.1",
]

bench = [
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "synapseclient>=2.0",
]

llm = [
  "openai>=1.0",
  "google-genai",
  "google-generativeai",
]

all = [
  "pytest>=8.0",
  "ruff>=0.4",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "synapseclient>=2.0",
  "openai>=1.0",
  "google-genai",
  "google-generativeai",
]

[project.scripts]
llm-pathway-curator = "llm_pathway_curator.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "paper/notebooks/**/*.ipynb",
  "paper/notebooks/_local/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "smoke: developer-facing adapter smoke tests (contract checks)",
]
