[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-pathway-curator"
dynamic = ["version"]  
description = "Transform enrichment outputs into verifiable, auditable pathway claims with calibrated abstention."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Ken Furudate"}]

keywords = [
  "bioinformatics",
  "computational-biology",
  "enrichment-analysis",
  "pathway-analysis",
  "quality-assurance",
  "selective-prediction",
  "abstention",
  "gsea",
  "fgsea",
  "reproducible-research",
  "llm",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.0",
  "tabulate>=0.9",
  "matplotlib>=3.8",
  "circlify>=0.15.1",
]

[project.urls]
Documentation = "https://llm-pathwaycurator.readthedocs.io/"
Repository = "https://github.com/kenflab/LLM-PathwayCurator"
Issues = "https://github.com/kenflab/LLM-PathwayCurator/issues"
Preprint = "https://doi.org/10.64898/2026.02.18.706381"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "openpyxl>=3.1",
]

bench = [
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "synapseclient>=2.0",
]

llm = [
  "openai>=1.0",
  "google-genai",
  "google-generativeai",
]

all = [
  "pytest>=8.0",
  "ruff>=0.4",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "synapseclient>=2.0",
  "openai>=1.0",
  "google-genai",
  "google-generativeai",
]

[project.scripts]
llm-pathway-curator = "llm_pathway_curator.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "paper/notebooks/**/*.ipynb",
  "paper/notebooks/_local/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "smoke: developer-facing adapter smoke tests (contract checks)",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+(?:\\.post\\d+)?(?:a\\d+|b\\d+|rc\\d+)?)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
